--- a/src/app/views/ad-books-gallery/ad-books-gallery.component.html
+++ b/src/app/views/ad-books-gallery/ad-books-gallery.component.html
@@ -1,24 +1,70 @@
-<div class="barC">
-  <div style="margin-top: 7px"><span class="bgBarC">Liste des livres</span></div>
+<div class="bar">
+  <div class="header-language" style="margin-top: 7px">
+    <span class="bgBar">
+    {{ 'title' | translate:title }}</span>
+    <div> Translate <button class="btn btn-primary btn-sm" (click)="switchLanguage('en')">English</button>
+    <button class="btn btn-primary btn-sm" (click)="switchLanguage('fr')">French</button></div>
+  </div>
 </div>
 <app-ad-search-books [customBookFilter]="customBookFilter"></app-ad-search-books>
+
+<div class="filtersBtn">
+  <button class="btn btn-info btn-sm btn-full-width" *ngIf="!filtersCollapsed" (click)="filtersCollapsed = !filtersCollapsed"
+    [attr.aria-expanded]="!filtersCollapsed">
+    <i class="fa fa-plus"></i>
+    {{ 'moreFilters' | translate:moreFilters }}
+  </button>
+
+  <button class="btn btn-info btn-sm" *ngIf="filtersCollapsed" (click)="filtersCollapsed = !filtersCollapsed" [attr.aria-expanded]="!filtersCollapsed">
+    <i class="fa fa-minus"></i>
+    {{ 'Hide' | translate:Hide }}
+  </button>
+</div>
+<div *ngIf="filtersCollapsed" [@fadeInOut] class="form-group selectFilters">
+  <strong> {{ 'Filters' | translate:Filters }}</strong>
+  <select class="form-control form-control-sm" type="text" [(ngModel)]="customBookFilter.categories">
+    <option value="">{{ 'Category' | translate:Category }}</option>
+    <option *ngFor="let category of uniqueCategoriesItems" value="{{category}}">{{category}}</option>
+  </select>
+
+  <select class="form-control form-control-sm" type="text" [(ngModel)]="customBookFilter.language">
+    <option value="">{{ 'Language' | translate:Language }}</option>
+    <option value="ar">{{ 'Arabic' | translate:Arabic }}</option>
+    <option value="fr">{{ 'French' | translate:French }}</option>
+    <option value="en">{{ 'English' | translate:English }}</option>
+  </select>
+</div>
+
 <div class="col-md-12">
   <div class="card-deck">
     <div class="booksWrapper">
-      <div class="card h-100" *ngFor="let book of (allBooks.items | booksPipe:customBookFilter.title | booksPipe:customBookFilter.language)">
-        <img class="card-img-top" src="{{book.volumeInfo.imageLinks.thumbnail}}" width="120px" height="220px" alt="Card image cap">
+      <div class="card h-100" *ngFor="let book of (allBooks | booksPipe:customBookFilter.title | booksPipe:customBookFilter.categories 
+      | booksPipe:customBookFilter.authors | languagePipe:customBookFilter.language | booksPipe:customBookFilter.publisher)">
+        <img *ngIf="book.volumeInfo.imageLinks!==undefined" class="card-img-top" src="{{book.volumeInfo.imageLinks.thumbnail}}" (click)="openModalDetails(book)"
+          width="120px" height="220px" alt="thumbnail">
+        <img *ngIf="book.volumeInfo.imageLinks===undefined" class="card-img-top" src="" (click)="openModalDetails(book)" width="120px"
+          height="220px" alt="no-thumbnail">
+
         <div class="card-body">
-          <h5 class="card-title">{{(book.volumeInfo.title.length>34)?(book.volumeInfo.title | slice:0:34)+'...':(book.volumeInfo.title)}}</h5>
-          <span style="color: #0079ac">Publisher: </span><span>{{book.volumeInfo.publisher}}</span>
-          <p class="card-text" *ngIf="book.volumeInfo.description==undefined">Ce livre ne contient aucune description</p>
+          <h5 class="card-title" (click)="openModalDetails(book)">{{(book.volumeInfo.title.length>34)?(book.volumeInfo.title
+            | slice:0:34)+'...':(book.volumeInfo.title)}}</h5>
+          <span style="color: #0079ac" translate>{{ 'Author' | translate:Author }}:</span><span *ngIf="book.volumeInfo.authors==undefined">{{
+            'Unknown' | translate:Unknown }}</span><span *ngIf="book.volumeInfo.authors!==undefined">{{book.volumeInfo.authors}}</span><br>
+          <span style="color: #0079ac" translate>{{ 'Publisher' | translate:Publisher }}: </span><span>{{book.volumeInfo.publisher}}</span>
+          <hr>
+          <p class="card-text" *ngIf="book.volumeInfo.description==undefined">{{ 'NoDescription' | translate:NoDescription
+            }}</p>
           <p class="card-text" *ngIf="book.volumeInfo.description!=undefined">{{(book.volumeInfo.description.length>110)?(book.volumeInfo.description
             | slice:0:110)+'...':(book.volumeInfo.description)}}</p>
-          <p *ngIf="book.volumeInfo.language === 'en'">Language: <span class="badge badge-primary">English</span></p>
-          <p *ngIf="book.volumeInfo.language === 'fr'">Language: <span class="badge badge-primary">French</span></p>
-          <p *ngIf="book.volumeInfo.language === 'ar'">Language: <span class="badge badge-primary">Arabic</span></p>
+          <p *ngIf="book.volumeInfo.language === 'en'">{{ 'Language' | translate:Language }}: <span class="badge badge-primary">{{
+              'English' | translate:English }}</span></p>
+          <p *ngIf="book.volumeInfo.language === 'fr'">{{ 'Language' | translate:Language }}: <span class="badge badge-primary">{{
+              'French' | translate:French }}</span></p>
+          <p *ngIf="book.volumeInfo.language === 'ar'">{{ 'Language' | translate:Language }}: <span class="badge badge-primary">{{
+              'Arabic' | translate:Arabic }}</span></p>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href="">Détails</a></small>
+          <button class="btn btn-md btn-outline-primary" (click)="openModalDetails(book)">Details</button>
         </div>
       </div>
     </div>
