--- a/src/app/views/ad-books-gallery/ad-books-gallery.component.scss
+++ b/src/app/views/ad-books-gallery/ad-books-gallery.component.scss
@@ -1,39 +1,75 @@
-.card-deck{
+.card-deck {
     padding: 15px 15px 15px 15px;
 }
 
-.barC{
+.bar {
     display: grid;
     grid-template-columns: 1fr;
-    background-color:#989898;
-    height: 20px;
+    background-color: #989898;
+    height: 40px;
     padding-top: 5px;
     text-align: left;
     color: white;
     padding-bottom: 37px;
     font-weight: 500;
-    font-size: 16px;
-    //padding: 15px;
+    font-size: 16px; //padding: 15px;
 }
-.bgBarC{
-    margin-left: 40px;
-    background-color: rgba(47, 53, 58,0.1);
-    padding: 5px 20px 8px 20px;
+
+.bgBar {
+    margin-left: 20px;
+    background-color: rgba(47, 53, 58, 0.1);
+    padding: 0px 20px 8px 20px;
 }
-.booksWrapper{
+
+.booksWrapper {
     display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: minmax(70px,  auto);
-        grid-gap: 20px;
-        padding: 30px 20px 30px 20px;
-        display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(70px, auto);
+    grid-gap: 20px;
+    padding: 30px 20px 30px 20px;
+    font-size: 15px;
 }
-.card-title{
+
+.card-title {
     color: #0079ac;
 }
-.card{
-    border: 1px solid rgb(32, 168, 216) ;
+
+.card {
+    // border: 1px solid rgb(32, 168, 216) ;
 }
-.card:hover{
-    background-color: #c5c5c5;
+
+.card:hover {
+    background-color: #e8e8e8;
+}
+
+.selectFilters {
+    display: grid;
+    grid-template-columns: 0.5fr 4fr 1fr;
+    grid-gap: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.card-footer {
+    text-align: center;
+}
+
+.card-img-top {
+    cursor: pointer;
+}
+
+.card-title {
+    cursor: pointer;
+}
+.filtersBtn{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+}
+.header-language{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
