--- a/src/app/views/ad-search-books/ad-search-books.component.html
+++ b/src/app/views/ad-search-books/ad-search-books.component.html
@@ -1,3 +1,6 @@
-<div class="form-group">
-    <input type="text" [(ngModel)]="customBookFilter.title" class="form-control" placeholder="Search book">
+<div class="form-group searchInput">
+    <span>
+        <i class="fas fa-search"></i>
+    </span>
+    <input class="form-control form-control-sm" type="text" [(ngModel)]="customBookFilter.title" placeholder="{{ 'searchInput' | translate:searchInput }}">
 </div>
